# SmartMonitor

./: .gitignore  README.md  clear_db.py  database.py  eulermind_history.db  gui_start.py  keyword_embeds.pt  keyword_index.json  pyproject.toml  requirements.txt
data/: sentence.json
data/DPOData/: clear_data.json
data/LoraData/: data.json
data/util/: Deepseek.py  clear_data.py
doc/: 1. OpenEuler虚拟机的安装.md  11.项目打包为CLI Tool实现命令行交互.md  12.数据集构建指南.md  13.微调大模型的评估方法.md  14. GIT的安装和使用.md  2. 在OpenEuler上运行pyhton项目.md  3.项目结构以及开发指南.md  4.CpuTools介绍.md  5.MemaryTools介绍.md  6.DiskTools介绍.md  7.FileTools介绍.md  8.NetworkTools介绍.md  9.ProcessTools介绍.md
eulermind_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
example/DownloadExample/: download.py
example/RetrieveExample/: RetrieveExample.py  SaveEmbeddings.py  UseEmbeddings.py
example/ToolsExample/: CpuToolsExample.py  DiskToolsExample.py  FileToolsExample.py  MemoryToolsExample.py  NetworkToolsExample.py  ProcessToolsExample.py
example/langchainExample/: example.py  testchat.py  testfunctioncall.py
project/: Agent.py  AgentGraph.py  AgentNode.py  AgentState.py  CpuTools.py  DiskTools.py  FileTools.py  MemoryTools.py  NetworkTools.py  ProcessTools.py  RouterTools.py  psutilTest.py
project/一些langchain使用的例子/: testchain.py
