[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eulermind-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"langchain",
	"langchain-community",
	"langgraph",
	"psutil",
	"python-dotenv",
	"transformers",
	"torch",
	"langchain_ollama"
]

#[关键步骤]配置CLI命令映射
#格式：命令名 = “包名.模块名：函数名“
[project.scripts]
eulermind-ai = "project.Agent:main"

[tool.setuptools]
packages = ["project"]