[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmonitor"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"langchain",
	"langchain-community",
	"langchain-ollama",
	"langgraph",
	"psutil",
	"PyQt6",
	"python-dotenv",
	"transformers",
	"torch"
]

#[关键步骤]配置CLI命令映射
#格式：命令名 = “包名.模块名：函数名“
[project.scripts]
smartmonitor = "project.Agent:main"

[tool.setuptools]
packages = ["project"]
